Bugfixes and optimizations

--- a/BotRetreat2018/BotRetreat2018.WebApi/BotRetreat2018.WebApi.csproj
+++ b/BotRetreat2018/BotRetreat2018.WebApi/BotRetreat2018.WebApi.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netcoreapp2.0\BotRetreat2017.WebApi.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netcoreapp2.0\BotRetreat2018.WebApi.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.0\BotRetreat2017.WebApi.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp2.0\BotRetreat2018.WebApi.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
@@ -32,5 +32,12 @@
     <ProjectReference Include="..\BotRetreat2018.Contracts\BotRetreat2018.Contracts.csproj" />
     <ProjectReference Include="..\BotRetreat2018.Routes\BotRetreat2018.Routes.csproj" />
   </ItemGroup>
+
+  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
+    <ItemGroup>
+      <DocFile Include="bin\$(Configuration)\$(TargetFramework)\*.xml" />
+    </ItemGroup>
+    <Copy SourceFiles="@(DocFile)" DestinationFolder="$(PublishDir)" SkipUnchangedFiles="false" />
+  </Target>
 
 </Project>
