--- a/BotRetreat2018/BotRetreat2018.Client/BotRetreat2018.Client.csproj
+++ b/BotRetreat2018/BotRetreat2018.Client/BotRetreat2018.Client.csproj
@@ -5,14 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RestSharp" Version="106.1.0" />
-    <PackageReference Include="Unity" Version="5.3.2" />
+    <PackageReference Include="RestSharp" Version="106.2.1" />
+    <PackageReference Include="Unity" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BotRetreat2018.Contracts\BotRetreat2018.Contracts.csproj" />
     <ProjectReference Include="..\BotRetreat2018.Routes\BotRetreat2018.Routes.csproj" />
     <ProjectReference Include="..\BotRetreat2018.Utilities\BotRetreat2018.Utilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
