--- a/BotRetreat2018/BotRetreat2018.Wpf.Dashboard/packages.config
+++ b/BotRetreat2018/BotRetreat2018.Wpf.Dashboard/packages.config
@@ -2,9 +2,10 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="Reactive.EventAggregator" version="3.0.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.1.0" targetFramework="net47" />
+  <package id="RestSharp" version="106.2.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net461" />
-  <package id="Unity" version="5.3.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="Unity" version="5.6.0" targetFramework="net461" />
 </packages>
